					activate event is processed.

	* macosx/tkMacOSXSubwindows.c:	add pixmap size field to MacDrawable
	* macosx/tkMacOSXInt.h:		struct; add flag for B&W pixmaps.
	* macosx/tkMacOSXDraw.c:
	* macosx/tkMacOSXEmbed.c:
	* macosx/tkMacOSXMenu.c:

	* macosx/tkMacOSXPrivate.h:	correct Leopard HIToolboxVersionNumber.

	* macosx/ttkMacOSXTheme.c:	add error checking; cleanup formatting.

2007-11-07  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTheme.c (Ttk_ElementSize): Fixed longstanding,
	subtle bug that caused element padding to sometimes be counted 
	twice in size computations.

	* generic/ttk/ttkElements.c, generic/ttk/ttkClamTheme.c,
	generic/ttk/ttkDefaultTheme.c, generic/ttk/ttkTreeview.c,
	generic/ttk/ttkImage.c, macosx/ttkMacOSXTheme.c,
	win/ttkWinTheme.c, win/ttkWinXPTheme.c:	Fix ElementSizeProcs affected
						 by previous change.

2007-11-06  Andreas Kupries  <andreask@activestate.com>

	* doc/CrtConsoleChan.3: Fixed markup typo and extended see also
	  section per suggestions by Donal.

2007-11-05  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/combobox.tcl: Set focus to listbox in <Map> binding
	instead of in Post command (see [Bug 1349811] for info).

2007-11-05  Andreas Kupries  <andreask@activestate.com>

	* doc/CrtConsoleChan.3: New file providing minimal documentation
	  of 'Tk_InitConsoleChannels()'. [Bug 432435]

2007-11-05  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSXTheme.c (TreeitemLayout): Remove focus ring
	from treeview items on OSX (problem reported by Kevin Walzer).

2007-11-04  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c: Use null "treearea" element for
	treeview owner-draw area instead of "client", to avoid
	nameclash with Notebook.client element (this was causing 
	sizing anomalies in XP theme, and introduced extraneous
	padding).
	* generic/ttk/ttkDefaultTheme.c: Treeitem.indicator element 
	needs left margin now.
